@@ -67,7 +67,7 @@ html.fluxx-mode-gallery { }
 html.fluxx-mode-media { }
 
 /* 'notes' app */
-html.fluxx-mode-notes #entries { }
+html.fluxx-mode-notes { }
 
 /* 'shorty' app */
 html.fluxx-mode-shorty { }
